objects/LAT_MX_CS001_AccountDocuments__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This Custom Seeting administrates the document types that have to be attached to the Account records for Mexico.</description>
    <fields>
        <fullName>LAT_MX_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LAT_MX_RequiredForChannel__c</fullName>
        <inlineHelpText>Must be completed with the following format: &quot;Channel1&quot;,&quot;Channel2&quot;,...,&quot;ChannelN&quot;</inlineHelpText>
        <label>Required for Channel</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LAT_MX_RequiredForType__c</fullName>
        <label>Required For Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_MX_TextToShow__c</fullName>
        <label>Text to show</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>LAT_MX_CS001_AccountDocuments</label>
</CustomObject>